--- a/section8_first_problem/.project
+++ b/section8_first_problem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course</name>
+	<name>section8_first_problem</name>
 	<comment></comment>
 	<projects>
 	</projects>
