alterado nome de alguns projetos

--- a/section08_first_problem/.project
+++ b/section08_first_problem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>section9_constructors</name>
+	<name>section08_first_problem</name>
 	<comment></comment>
 	<projects>
 	</projects>
