--- a/section08_second_problem/.project
+++ b/section08_second_problem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>section8_member_static</name>
+	<name>section08_second_problem</name>
 	<comment></comment>
 	<projects>
 	</projects>
