--- a/section09_exerc/.project
+++ b/section09_exerc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>section8_first_problem</name>
+	<name>section09_exerc</name>
 	<comment></comment>
 	<projects>
 	</projects>
