--- a/section13_enum/.project
+++ b/section13_enum/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <projectDescription>
-  <name>section9_exerc</name>
+  <name>section13_enum</name>
   <comment/>
   <projects>&#xD;
     </projects>
